devops/kubernetes/k8lab-1/mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mondo-express
    labels:
        app: mongo-express
spec:
    replicas: 1
    selector:
        matchLabels: 
            app: mongo-express
    template:
        metadata:
            labels:
                app: mongo-express
        spec:
            containers:
                - name: mongo-express
                  image: mongo-express
                  ports:
                      - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
    name: mongodb-express-service
spec:
    selector: 
        app: mongo-express
    type: LoadBalancer
    ports:
        - protocol: TCP
          port: 8081
          targetPort: 8081
          nodePort: 30000
