devops/kubernetes/k8lab-1/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
    name: mongodb-service
spec:
    selector: 
        app: mongodb
    ports:
        - protocol: TCP
          port: 27017
          targetPort: 27017
