devops/kubernetes/k8lab-1/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: dashboard-ingress
    namespace: kubernetes-dashboard
spec:
    rules:
        - host: dashboard.com
          http:
              paths:
                - backend:
                      serviceName: kubernetes-dashboard
                      servicePort: 80
